# llm_hoops

./: .gitignore  main.py  pyproject.toml
data/: nba.csv  prompt_rag.txt  query_function_calling.txt  query_simple.txt
llm_hoops/: utils.py
llm_hoops/function_calling/: function_calling.py
llm_hoops/model/: model.py
llm_hoops/rag/: rag.py
